# kineto

libkineto/: CMakeLists.txt
libkineto/src/: RocLogger.h  RocmActivityProfiler.cpp  RocprofActivity_inl.h  RocprofLogger.cpp  RocprofLogger.h  RoctracerActivityApi.cpp  RoctracerActivityApi.h  RoctracerActivity_inl.h  RoctracerLogger.cpp  RoctracerLogger.h  init.cpp
libkineto/src/plugin/amdsmi/: CMakeLists.txt  README.md
libkineto/src/plugin/amdsmi/examples/: attention_loop.py  overhead_bench.py  tiny_matmul.py
libkineto/src/plugin/amdsmi/include/kineto_amdsmi/: AmdSmiDriver.h
libkineto/src/plugin/amdsmi/python/kineto_amdsmi/: __init__.py  postprocess.py
libkineto/src/plugin/amdsmi/src/: AmdSmiActivityProfiler.cpp  AmdSmiActivityProfiler.h  AmdSmiActivityProfilerSession.cpp  AmdSmiActivityProfilerSession.h  AmdSmiDriver.cpp  AmdSmiSampler.cpp  AmdSmiSampler.h  PluginRegister.cpp  standalone_dump.cpp
libkineto/test/: RocmActivityProfilerTest.cpp
